--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ markdown: kramdown
 url: ''
 baseurl: ''
 title: 绿洲
-description: 纯粹的游戏氛围
+description: 纯粹的娱乐环境
 site-image: /WhatATheme/assets/images/meta.jpg
 site-keywords: 'wow, nga, 魔兽, 手法, WOW宏, 魔兽宏'
 favicon-url: null
