--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author-name: 绿洲
 author-image: >-
   https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png
 author-about: >-
-  心态成熟, 氛围轻松的游戏团队
+  心态成熟, 氛围轻松的游戏团队。几乎好玩的游戏都能找到玩伴, 人品优秀, 责任感十足是我们对成员的基本要求。绿洲 - 在线跨界聊天社区
 author-url: 'https://github.com/thedevslot'
 sass:
   sass_dir: _sass
