--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,7 +1,7 @@
-- name: 决战奥格瑞玛
-  image: https://www.method.gg/images/world-firsts/raids/mop/mop-siege-of-orgrimmar.jpg
+- name: 大未来
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-mage-fire.jpg?maxWidth=1630
   link:
-  description: 千钧一发. 版本后期建会, 由全国各地的大学生组成, 小吼是在教室通宵开荒完成.
+  description: 绿洲首席法师, 频繁霸榜
 - name: 悬槌堡
   link:
   image: https://www.method.gg/images/world-firsts/raids/wod/wod-highmaul.jpg
