--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -14,3 +14,21 @@
   link:
   image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-druid-restoration.jpg
   description: 公会最帅的比，六年老军医，大米我还是老老实实玩我的咕咕吧，团本第一替补唯一坐骑党，支持金币投喂
+- name: 随遇丶
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-mage-fire.jpg
+  description: 第一次玩法师，争取dps不垫底！大米缺人随叫随到。
+- name: 九重樱
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-shaman-elemental.jpg
+  description: 打本狂魔    喜欢打本的过程     坐骑全送—.—  不太习惯开麦说话  喜欢安安静静听人吹比
+- name: 冷滩刘勇
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-mage-fire.jpg
+  description: 第一次玩法师，大锅吞噬者，战士的爸爸
+- name: 橙皇
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-warrior-arms.jpg
+  description: 战士是种信仰 眼里只有冲锋 DPS 随缘 
+  
+  
