--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -14,6 +14,10 @@
   link:
   image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-druid-restoration.jpg
   description: 公会最帅的比，六年老军医，大米我还是老老实实玩我的咕咕吧，团本第一替补唯一坐骑党，支持金币投喂
+- name: 虔誠丶
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-priest-shadow.jpg
+  description: 这是与他们一起的第七个年头。大凡有所成于这世上的人，都离不开三分人事，七分天意。天意使我们识得，人事让我们一直相处。阴阳怪气的截图嘲讽dps；清小怪躲在后面假装不在；因为过了尾王你争我抢排队合影；因为差那么一丝血灭团气的破口大骂摔鼠标……人事与天意让这些人这些事此刻依旧继续。我是这些人中的一个牧师，以后也是你们中的一个牧师。绿洲是一个始终有梦想的地方。不管是曾经不顾一切的冲进度，亦或是为了yy那此起彼伏的笑。曾有一段，我觉得我们的梦想听起来有些可笑，是“手可摘星辰”似的谎话，是属于盲目理想的文青或不经世事的楞头青。它煽动和催化你的热情，鼓励你伸手、攀岩，然后可笑的发现一无所有。其实不然，在这条版本更迭的路上，那些人，才是梦想，才是宝藏。
 - name: 随遇丶
   link:
   image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-mage-fire.jpg
@@ -30,5 +34,11 @@
   link:
   image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-warrior-arms.jpg
   description: 战士是种信仰 眼里只有冲锋 DPS 随缘 
-  
-  
+- name: 苦瓜先生丶
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-hunter-marksmanship.jpg
+  description: 别说话，吻我
+- name: 咸鱼贼丶
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-rogue-outlaw.jpg
+  description: 萌新一个 第一次接触这个游戏 好哥哥装备毕业的 请给我 谢谢
