--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -34,6 +34,10 @@
   link:
   image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-warrior-arms.jpg
   description: 战士是种信仰 眼里只有冲锋 DPS 随缘 
+- name: 韩槑槑
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-mage-fire.jpg
+  description: 没啥特点，就两字，长！粗！会找洞！
 - name: 苦瓜先生丶
   link:
   image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-hunter-marksmanship.jpg
@@ -42,3 +46,7 @@
   link:
   image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-rogue-outlaw.jpg
   description: 萌新一个 第一次接触这个游戏 好哥哥装备毕业的 请给我 谢谢
+- name: 景禾
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-demon-hunter-havoc.jpg
+  description: 贵州苗疆蛊术第一人，善于整蛊，所以人送外号整蛊王。
