--- a/_config.yml
+++ b/_config.yml
@@ -10,16 +10,16 @@ heroimage: >-
   https://images.unsplash.com/photo-1612980848349-3e3e98730014?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80
 email: leeoyos@gmail.com
 facebook_username: thedevslot
-twitter_username: thedevslot
+twitter_username: liuliuliucome
 instagram_username: thedevslot
 linkedin_username: thedevslot
 github_username: thedevslot
-youtube_channel_id: UCk_93NXYP-U_AOB5GfWlOow
+youtube_channel_id: /
 reddit_username: /
 behance_username: /
 dribbble_username: /
 spotify_username: /
-google-analytics: UA-163806439-1
+google-analytics: UA-176584087-1
 disqus-shortname: thedevslot
 author-name: 绿洲
 author-image: >-
