--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -38,14 +38,38 @@
   link:
   image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-mage-fire.jpg
   description: 没啥特点，就两字，长！粗！会找洞！
-- name: 苦瓜先生丶
+- name: G
   link:
-  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-hunter-marksmanship.jpg
-  description: 别说话，吻我
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-shaman-restoration.jpg
+  description: SM
 - name: 咸鱼贼丶
   link:
   image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-rogue-outlaw.jpg
   description: 萌新一个 第一次接触这个游戏 好哥哥装备毕业的 请给我 谢谢
+- name: 唤醒末来
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-priest-holy.jpg
+  description: 牧师
+- name: 瓜瓜
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-hunter-marksmanship.jpg
+  description: 葉山瞳的父亲，大未来的最爱
+- name: CloudMeter
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-paladin-holy.jpg
+  description: BOSS我唯唯诺诺，小怪我重拳出击  
+- name: 葉山瞳
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-rogue-outlaw.jpg
+  description: 毒瘤瓜的监护人以及监督者。
+- name: 豪哥的鸡肉饭
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-druid-balance.jpg
+  description: 不是豪哥，也不是牛肉饭
+- name: 魔化萨满
+  link:
+  image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-shaman-enhancement.jpg
+  description: 大米幻神，毁天灭地，掌控雷电，恐怖如斯；团本隐身，看不见人，突然暴毙，最后出本
 - name: 景禾
   link:
   image: https://wow.zamimg.com/images/content/tall-headers/retail/categories/classes-demon-hunter-havoc.jpg
